examples/invalid_programs/ret_type_mismatch.qyk
func main() int {
    return get_msg()
}

func get_msg() *char {
    return "Hello, world!"
}
